--- a/Pages/About.razor
+++ b/Pages/About.razor
@@ -49,7 +49,7 @@
     <h2><strong>Descripción del Software:</strong></h2>
 
     <p>
-        Este programa mejora apticamente el funcionamiento de este Liquor Store. Los aspectos destacados 
+        Este programa mejora apticamente el funcionamiento de esta Tienda. Los aspectos destacados 
         incluyen:
     </p>
     <ul>
