--- a/Pages/Cuadrar/Cuadrar.razor
+++ b/Pages/Cuadrar/Cuadrar.razor
@@ -368,12 +368,12 @@
 
         var Credito = facturasPosteriores
             .Where(c => c.TypePayment == "2" && c.SaldoPendiente > 0)
-            .Sum(c => c.SubTotal);
+            .Sum(c => c.SubTotal - c.TotalDesc);
 
         // Calcular el monto en caja sumando las facturas y los pagos posteriores al último cuadre
         var Contado = facturasPosteriores
             .Where(c => c.TypePayment == "1" && c.SaldoPendiente <= 0)
-            .Sum(c => c.SubTotal);
+            .Sum(c => c.SubTotal - c.TotalDesc);
 
         var Pago = (decimal)pagosPosteriores
             .Sum(c => c.MontoPagado);
