--- a/Pages/Facturacion/FacturaCredito.razor
+++ b/Pages/Facturacion/FacturaCredito.razor
@@ -423,8 +423,8 @@ else
                                                         </button>
                                                     
                                                     }
-                                                    <button @onclick="()=>Seleccionar(f.Id, f)" class="btn btn-outline-warning">
-                                                        <span class="oi oi-pencil"></span>
+                                                    <button @onclick="()=>Seleccionar(f.Id, f)" class="btn btn-outline-info">
+                                                        <span class="oi oi-info"></span>
                                                     </button>
                                                     <button @onclick="() => Eliminar(f)" class="btn btn-outline-danger d-print-none" >
                                                         <span class="oi oi-trash"></span>
